--- a/static/index.html
+++ b/static/index.html
@@ -67,8 +67,7 @@
 <body>
     <div id="canvas_container">
         <!-- <div id="loading_screen">Loading...</div> -->
-        <!-- <canvas id="gl_canvas"></canvas> -->
-        <canvas id="ctx_canvas"></canvas>
+        <canvas id="canvas"></canvas>
     </div>
 </body>
 
