better on mobile

--- a/static/index.html
+++ b/static/index.html
@@ -17,9 +17,10 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: #333;
+            background-color: #6FD3CA;
             overflow: hidden;
             overscroll-behavior: contain;
+            touch-action: none;
         }
 
         #canvas_container {
