--- a/static/index.html
+++ b/static/index.html
@@ -17,7 +17,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: #6FD3CA;
+            background-color: #004e89;
             overflow: hidden;
             overscroll-behavior: contain;
             touch-action: none;
