chess speed, loading text

--- a/static/index.html
+++ b/static/index.html
@@ -51,10 +51,11 @@
             background-image: url("loading.png");
             background-repeat: no-repeat;
             background-color: #b0b0b0;
-            font-size: larger;
+            font-size: 36px;
             text-align: center;
-            line-height: 90vh;
-            color: #000000;
+            line-height: 20vh;
+            color: #272227;
+            font-family: monospace;
 
             position: absolute;
             width: 100%;
@@ -62,6 +63,7 @@
             z-index: 2;
             opacity: 1;
             user-select: none;
+            pointer-events: none;
         }
     </style>
     <script defer type="module" src="main.js"></script>
@@ -69,7 +71,9 @@
 
 <body>
     <div id="canvas_container">
-        <div id="loading_screen"></div>
+        <div id="loading_screen">
+            <p style="margin-top: 79vh;">Loading...</p>
+        </div>
         <canvas id="canvas"></canvas>
     </div>
 </body>
